fix: both back and hambtn visible

--- a/components/AboutUs/SlotMachineExitCross/cross.module.scss
+++ b/components/AboutUs/SlotMachineExitCross/cross.module.scss
@@ -1,15 +1,15 @@
-.cross{
-    opacity: 0;
-    left: 80px;
-    top: 60px;
-    color: white;
-    position: absolute;
-    cursor: pointer;
-    z-index: 100;
+.cross {
+  opacity: 0;
+  left: 50px;
+  top: 60px;
+  color: white;
+  position: absolute;
+  cursor: pointer;
+  z-index: 100;
 
-    svg{
-        aspect-ratio: 1 / 1;
-        width: 36px;
-        height: auto;
-    }
+  svg {
+    aspect-ratio: 1 / 1;
+    width: 36px;
+    height: auto;
+  }
 }
